--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Questions will load here -->
     </section>
 
-    <script src="data/questions.js"></script>
+    <script src="data/question.js"></script>
     <script src="js/script.js"></script>
 
 </body>
