--- a/index.html
+++ b/index.html
@@ -1,56 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interview Question Hub</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tech Interview Q&A</title>
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
 
     <header>
-        <h1>Interview Question Hub</h1>
-        <p>Linux • AWS • Terraform • Docker • Scenario-Based Questions</p>
+        <h1>Tech Interview Q&A</h1>
+        <p>Select a subject and difficulty level</p>
     </header>
 
-    <div class="container">
+    <section id="controls">
+        <select id="subjectSelect">
+            <option value="">Select Subject</option>
+            <option value="linux">Linux</option>
+            <option value="aws">AWS</option>
+            <option value="terraform">Terraform</option>
+            <option value="docker">Docker</option>
+        </select>
 
-        <aside class="sidebar">
-            <h2>Filters</h2>
+        <select id="difficultySelect">
+            <option value="">Select Difficulty</option>
+            <option value="easy">Easy</option>
+            <option value="medium">Medium</option>
+            <option value="hard">Hard</option>
+            <option value="scenario">Scenario Based</option>
+        </select>
 
-            <label>Area</label>
-            <select id="areaFilter">
-                <option value="All">All</option>
-                <option value="Linux">Linux</option>
-                <option value="AWS">AWS</option>
-                <option value="Terraform">Terraform</option>
-                <option value="Docker">Docker</option>
-            </select>
+        <button onclick="filterQuestions()">Show Questions</button>
+    </section>
 
-            <label>Difficulty</label>
-            <select id="difficultyFilter">
-                <option value="All">All</option>
-                <option value="Easy">Easy</option>
-                <option value="Medium">Medium</option>
-                <option value="Hard">Hard</option>
-                <option value="Scenario">Scenario</option>
-            </select>
-
-            <label>Search</label>
-            <input type="text" id="searchBox" placeholder="Search questions...">
-
-            <button id="resetBtn">Reset</button>
-        </aside>
-
-        <main class="content">
-            <h2>Questions</h2>
-            <div id="questionsContainer"></div>
-        </main>
-
-    </div>
+    <section id="qaSection"></section>
 
     <script src="data/questions.js"></script>
     <script src="js/script.js"></script>
+
 </body>
 </html>
